完善JsonPath历史记录逻辑，优化Json历史记录