@@ -1,10 +1,10 @@
 package cn.memoryzy.json.ui;
 
+import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.util.StrUtil;
 import cn.hutool.json.JSONUtil;
 import cn.memoryzy.json.bundles.JsonAssistantBundle;
 import cn.memoryzy.json.constants.JsonAssistantPlugin;
-import cn.memoryzy.json.service.JsonViewerHistoryState;
 import cn.memoryzy.json.ui.basic.CustomizedLanguageTextEditor;
 import cn.memoryzy.json.ui.basic.jsonpath.JsonPathExtendableComboBoxEditor;
 import cn.memoryzy.json.ui.basic.jsonpath.JsonPathFileTypeComboBoxEditor;
@@ -18,20 +18,20 @@ import com.intellij.openapi.fileTypes.PlainTextFileType;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.ui.ComboBox;
 import com.intellij.openapi.ui.Splitter;
+import com.intellij.ui.CollectionComboBoxModel;
 import com.intellij.ui.JBColor;
 import com.intellij.ui.LanguageTextField;
 import com.intellij.ui.components.JBLabel;
 import com.intellij.util.ui.JBFont;
 import com.intellij.util.ui.JBUI;
 import com.jayway.jsonpath.JsonPath;
+import com.jayway.jsonpath.PathNotFoundException;
 import org.jetbrains.annotations.NotNull;
 
 import javax.swing.*;
 import java.awt.*;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
+import java.util.*;
 
 /**
  * @author Memory
@@ -39,34 +39,34 @@ import java.util.Objects;
  */
 public class JsonPathPanel {
     private static final Logger LOG = Logger.getInstance(JsonPathPanel.class);
-    public static final String TEXT_FIELD_PROPERTY_NAME = "JsonPathTextFieldAction";
     public static final String JSON_PATH_FILE_TYPE_CLASS_NAME = "com.intellij.jsonpath.JsonPathFileType";
     public static final Class<?> JSON_PATH_FILE_TYPE_CLASS = JsonAssistantUtil.getClass(JSON_PATH_FILE_TYPE_CLASS_NAME);
     public static final String JSON_PATH_HISTORY_KEY = JsonAssistantPlugin.PLUGIN_ID_NAME + ".JsonPathHistory";
 
-    private final ComboBox<String> jsonPathTextField;
+    private final ComboBox<String> pathExpressionComboBoxTextField;
     private final CustomizedLanguageTextEditor showTextEditor;
     private final Runnable action;
     private final Project project;
-    private ComboBoxEditor editor;
+    private ComboBoxEditor jsonPathNestedComboBoxEditor;
+    private CollectionComboBoxModel<String> comboBoxModel;
 
     public JsonPathPanel(Project project, LanguageTextField jsonTextField) {
         this.project = project;
-        this.action = () -> setJsonPathResult(jsonTextField.getText());
-        this.jsonPathTextField = createJsonPathTextField(project, action);
+        this.action = () -> fillJsonPathResult(jsonTextField.getText());
+        this.pathExpressionComboBoxTextField = createJsonPathTextField(project);
         this.showTextEditor = new CustomizedLanguageTextEditor(JsonLanguage.INSTANCE, project, "", true);
         this.showTextEditor.setFont(JBUI.Fonts.create("Consolas", 14));
     }
 
     public JPanel getRootPanel() {
-        JBLabel tipLabel = new JBLabel(JsonAssistantBundle.message("dialog.json.path.text.field.history.tip"));
+        JBLabel tipLabel = new JBLabel(JsonAssistantBundle.messageOnSystem("dialog.json.path.text.field.history.tip"));
         tipLabel.setHorizontalAlignment(SwingConstants.RIGHT);
         tipLabel.setForeground(JBColor.GRAY);
-        tipLabel.setFont(JBUI.Fonts.label(11));
+        tipLabel.setFont(JBUI.Fonts.smallFont());
         tipLabel.setBorder(JBUI.Borders.empty(0, 2));
 
         JPanel firstPanel = new JPanel(new BorderLayout());
-        firstPanel.add(jsonPathTextField, BorderLayout.CENTER);
+        firstPanel.add(pathExpressionComboBoxTextField, BorderLayout.CENTER);
         firstPanel.add(tipLabel, BorderLayout.SOUTH);
 
         JPanel secondPanel = new JPanel(new BorderLayout());
@@ -82,33 +82,29 @@ public class JsonPathPanel {
         rootPanel.add(splitter, BorderLayout.CENTER);
         rootPanel.setPreferredSize(new Dimension(260, 280));
         rootPanel.setBorder(JBUI.Borders.empty(3));
-        rootPanel.putClientProperty(TEXT_FIELD_PROPERTY_NAME, action);
         return rootPanel;
     }
 
 
-    private @NotNull ComboBox<String> createJsonPathTextField(Project project, Runnable action) {
-        JBFont font = JBUI.Fonts.label(13);
-        editor = JSON_PATH_FILE_TYPE_CLASS != null
+    private @NotNull ComboBox<String> createJsonPathTextField(Project project) {
+        List<String> jsonPathHistoryList = getExpressionHistory();
+        comboBoxModel = new CollectionComboBoxModel<>(jsonPathHistoryList);
+        ComboBox<String> comboBox = new ComboBox<>(comboBoxModel);
+        JBFont font = JBUI.Fonts.create("JetBrains Mono", 14);
+
+        jsonPathNestedComboBoxEditor = JSON_PATH_FILE_TYPE_CLASS != null
                 ? new JsonPathFileTypeComboBoxEditor(project, getJsonPathFileType(), font)
                 : new JsonPathExtendableComboBoxEditor(action, font);
 
-        ComboBox<String> comboBox = new ComboBox<>();
-        comboBox.setEditor(editor);
+        comboBox.setEditor(jsonPathNestedComboBoxEditor);
         comboBox.setEditable(true);
-
-        for (String jsonPathHistory : getJsonPathHistoryList()) {
-            comboBox.addItem(jsonPathHistory);
-        }
+        jsonPathNestedComboBoxEditor.setItem(null);
 
         return comboBox;
     }
 
-    public void setJsonPathResult(String jsonStr) {
-        String jsonPath = (editor instanceof JsonPathFileTypeComboBoxEditor)
-                ? ((JsonPathFileTypeComboBoxEditor) editor).getEditorText()
-                : ((JsonPathExtendableComboBoxEditor) editor).getEditorText();
-
+    public void fillJsonPathResult(String jsonStr) {
+        String jsonPath = getPathExpression();
         if (Objects.isNull(jsonPath) || StrUtil.isBlank(jsonStr) || !JsonUtil.isJsonStr(jsonStr)) {
             return;
         }
@@ -119,26 +115,56 @@ public class JsonPathPanel {
             if (result instanceof Map || result instanceof Iterable) {
                 jsonResult = JsonUtil.formatJson(JSONUtil.toJsonStr(result));
             } else {
-                jsonResult = Objects.toString(result);
+                if (result == null) {
+                    jsonResult = "null";
+                } else if (result instanceof String) {
+                    jsonResult = "\"" + result + "\"";
+                } else {
+                    jsonResult = Objects.toString(result);
+                }
             }
 
             showTextEditor.setText(jsonResult);
 
             // 添加至历史记录
-            addJsonPathHistory(jsonPath);
+            addJSONPathToHistory(jsonPath);
+        } catch (PathNotFoundException ex) {
+            showTextEditor.setText(ex.getMessage());
         } catch (Exception ex) {
             LOG.warn("JSONPath resolution failed", ex);
         }
     }
 
-    public void searchHistory(boolean isDown) {
-        List<String> jsonPathHistoryList = getJsonPathHistoryList();
+    public void searchHistory(boolean isUp) {
+        // 历史记录列表
+        List<String> history = getExpressionHistory();
+        if (CollUtil.isEmpty(history)) {
+            return;
+        }
 
+        // 当前编辑框内的JsonPath
+        String expression = getPathExpression();
+        // 获取索引
+        int index = history.indexOf(expression);
+        // 清空选中
+        pathExpressionComboBoxTextField.setSelectedItem(null);
 
+        if (isUp) {
+            // 从前往后
+            if (index == -1) {
+                pathExpressionComboBoxTextField.setSelectedIndex(0);
+            } else {
+                pathExpressionComboBoxTextField.setSelectedIndex((index < (history.size() - 1)) ? index + 1 : index);
+            }
+        } else {
+            if (index != -1) {
+                pathExpressionComboBoxTextField.setSelectedIndex((index == 0) ? 0 : index - 1);
+            }
+        }
     }
 
-    public JComponent getJsonPathTextField() {
-        return jsonPathTextField;
+    public JComponent getPathExpressionComboBoxTextField() {
+        return pathExpressionComboBoxTextField;
     }
 
     public Runnable getAction() {
@@ -146,39 +172,58 @@ public class JsonPathPanel {
     }
 
 
-    public List<String> getJsonPathHistoryList() {
-        PropertiesComponent propertiesComponent = PropertiesComponent.getInstance(project);
-        String jsonPathHistoryStr = propertiesComponent.getValue(JSON_PATH_HISTORY_KEY);
-        if (StrUtil.isNotBlank(jsonPathHistoryStr)) {
-            return StrUtil.split(jsonPathHistoryStr, '\n');
-        }
-
-        return new ArrayList<>();
+    public List<String> getExpressionHistory() {
+        String expressionHistory = PropertiesComponent.getInstance(project).getValue(JSON_PATH_HISTORY_KEY);
+        return StrUtil.isNotBlank(expressionHistory) ? StrUtil.split(expressionHistory, '\n') : new ArrayList<>();
     }
 
-    public void addJsonPathHistory(String jsonPath) {
-        jsonPath = StrUtil.trim(jsonPath);
-        PropertiesComponent propertiesComponent = PropertiesComponent.getInstance(project);
-        String jsonPathHistoryStr = propertiesComponent.getValue(JSON_PATH_HISTORY_KEY);
-        List<String> jsonPathHistoryList = StrUtil.isNotBlank(jsonPathHistoryStr) ? StrUtil.split(jsonPathHistoryStr, '\n') : new ArrayList<>();
+    public void setExpressionHistory(Collection<String> history) {
+        PropertiesComponent.getInstance(project).setValue(JSON_PATH_HISTORY_KEY, StrUtil.join("\n", history));
+    }
 
-        if (!jsonPathHistoryList.contains(jsonPath)) {
-            // 限制为20个
-            if (jsonPathHistoryList.size() == JsonViewerHistoryState.HISTORY_LIMIT) {
-                jsonPathHistoryList.remove(0);
-                jsonPathTextField.remove(0);
+
+    public void addJSONPathToHistory(String expression) {
+        expression = StrUtil.trim(expression);
+
+        ArrayDeque<String> history = new ArrayDeque<>(getExpressionHistory());
+        if (!history.contains(expression)) {
+            history.addFirst(expression);
+            if (history.size() > 10) {
+                history.removeLast();
             }
 
-            jsonPathHistoryList.add(jsonPath);
-            jsonPathTextField.addItem(jsonPath);
-
-            if (editor instanceof JsonPathFileTypeComboBoxEditor) {
-                ((JsonPathFileTypeComboBoxEditor) editor).setEditorText(jsonPath);
-            } else {
-                ((JsonPathExtendableComboBoxEditor) editor).setEditorText(jsonPath);
+            setExpressionHistory(history);
+            comboBoxModel.add(0, expression);
+        } else {
+            // 移动位置
+            if (StrUtil.equals(history.getFirst(), expression)) {
+                // 若已是第一个元素，则不需管
+                return;
             }
 
-            propertiesComponent.setValue(JSON_PATH_HISTORY_KEY, StrUtil.join("\n", jsonPathHistoryList));
+            history.remove(expression);
+            history.addFirst(expression);
+            setExpressionHistory(history);
+
+            comboBoxModel.remove(expression);
+            comboBoxModel.add(0, expression);
+        }
+
+        setPathExpression(expression);
+    }
+
+
+    public String getPathExpression() {
+        return StrUtil.trim((jsonPathNestedComboBoxEditor instanceof JsonPathFileTypeComboBoxEditor)
+                ? ((JsonPathFileTypeComboBoxEditor) jsonPathNestedComboBoxEditor).getEditorText()
+                : ((JsonPathExtendableComboBoxEditor) jsonPathNestedComboBoxEditor).getEditorText());
+    }
+
+    public void setPathExpression(String jsonPath) {
+        if (jsonPathNestedComboBoxEditor instanceof JsonPathFileTypeComboBoxEditor) {
+            ((JsonPathFileTypeComboBoxEditor) jsonPathNestedComboBoxEditor).setEditorText(jsonPath);
+        } else {
+            ((JsonPathExtendableComboBoxEditor) jsonPathNestedComboBoxEditor).setEditorText(jsonPath);
         }
     }
 
